# Riner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  _clang-format  default.nix
docs/: .nojekyll  Doxyfile  Makefile  index.html
docs/source/: allindex.rst  class.rst  conf.py  examples_autorefillqueue.rst  function.rst  getting_started.rst  index.rst  introduction.rst  license.rst  post_make.py
lib/variant/: variant.hpp
src/: _clang-format
src/algorithm/: AlgoFactory.cpp  AlgoFactory.h  Algorithm.cpp  Algorithm.h
src/algorithm/dummy/: AlgoDummy.cpp  AlgoDummy.h
src/algorithm/ethash/: AlgoEthashCL.cpp  AlgoEthashCL.h  DagCache.cpp  DagCache.h  DagFile.cpp  DagFile.h  EthSha3.cpp  EthSha3.h  Ethash.cpp  Ethash.h  ethash.cl
src/algorithm/grin/: AlgoCuckaroo31Cl.cpp  AlgoCuckaroo31Cl.h  AlgoCuckarooCl.cpp  AlgoCuckarooCl.h  AlgoCuckatoo31Cl.cpp  AlgoCuckatoo31Cl.h  Cuckaroo.cpp  Cuckaroo.h  Cuckatoo.cpp  Cuckatoo.h  CuckatooTest.cpp  Graph.cpp  Graph.h  GraphTest.cpp  cuckatoo.cl  siphash.h
src/application/: ApiServer.cpp  ApiServer.h  Application.cpp  Application.h  CLI.cpp  CLI.h  Config.cpp  Config.h  Device.cpp  Device.h  LoggingMain.cpp  Main.cpp  Registry.cpp  Registry.h  RegistryImpl.cpp  ShutdownState.cpp  ShutdownState.h  TestMain.cpp  Types.cpp  Types.h  config.proto
src/common/: Assert.h  Chrono.h  Endian.h  Future.h  Json.h  JsonForward.h  OpenCL.h  Optional.h  PlatformDefines.h  Pointers.h  Span.h  StringSpan.h  Variant.h  WorkCommon.cpp  WorkCommon.h  portable_endian.h
src/compute/: ComputeApiEnums.cpp  ComputeApiEnums.h  ComputeModule.cpp  ComputeModule.h  DeviceId.cpp  DeviceId.h
src/compute/opencl/: CLError.cpp  CLError.h  CLProgramLoader.cpp  CLProgramLoader.h
src/config/: Config.cpp  Config.h  ConfigDefaultValues.h  ConfigTest.cpp  ExampleConfig.textproto  TutorialConfig.h  config.proto
src/crypto/: blake2-impl.h  blake2.h  blake2b-ref.cpp
src/gpu_api/: AmdSysfsApi.cpp  AmdSysfsApi.h  AmdgpuApi.cpp  AmdgpuApi.h  GpuApi.cpp  GpuApi.h
src/kernel/: cuckatoo.cl
src/network/: BaseIO.cpp  BaseIO.h  CxnHandle.cpp  CxnHandle.h  IOTypeLayer.h  JrpcBuilder.cpp  JrpcBuilder.h  JrpcBuilderTest.cpp  JrpcServer.cpp  JrpcServer.h  JrpcTest.cpp  JsonIO.cpp  JsonIO.h  JsonRpcBuilder.cpp  JsonRpcBuilder.h  JsonRpcHandlerMap.cpp  JsonRpcHandlerMap.h  JsonRpcIO.cpp  JsonRpcIO.h  JsonRpcInvoke.h  JsonRpcMessage.cpp  JsonRpcMessage.h  JsonRpcMethod.cpp  JsonRpcMethod.h  JsonRpcUtil.cpp  JsonRpcUtil.h  LineIO.cpp  LineIO.h  Socket.cpp  Socket.h  SslDesc.cpp  SslDesc.h  TcpJsonProtocolUtil.cpp  TcpJsonProtocolUtil.h  TcpJsonRpcProtocolUtil.cpp  TcpJsonRpcProtocolUtil.h  TcpJsonSubscription.cpp  TcpJsonSubscription.h  TcpLineProtocolUtil.cpp  TcpLineProtocolUtil.h  (+4 more)
src/pool/: AutoRefillQueue.h  DummyTestPoolServer.cpp  DummyTestPoolServer.h  Pool.cpp  Pool.h  PoolDummy.cpp  PoolDummy.h  PoolEthash.cpp  PoolEthash.h  PoolFactory.cpp  PoolFactory.h  PoolGrin.cpp  PoolGrin.h  PoolSwitcher.cpp  PoolSwitcher.h  PoolWithWorkQueue.h  StratumPoolBase.cpp  StratumPoolBase.h  Work.cpp  Work.h  WorkCuckaroo.h  WorkCuckatoo31Test.cpp  WorkCuckoo.h  WorkDummy.h  WorkEthash.h  WorkQueue.h  WorkTest.cpp
src/statistics/: Average.cpp  Average.h  DeviceRecords.cpp  DeviceRecords.h  PoolRecords.cpp  PoolRecords.h  Record.cpp  Record.h  StatisticNode.cpp  StatisticNode.h  Statistics.cpp  Statistics.h
src/util/: AsioErrorUtil.cpp  AsioErrorUtil.h  Barrier.cpp  Barrier.h  Bytes.h  ConfigUtils.cpp  ConfigUtils.h  Copy.h  DifficultyTarget.cpp  DifficultyTarget.h  DynamicBuffer.cpp  DynamicBuffer.h  FileUtils.cpp  FileUtils.h  HexString.cpp  HexString.h  LockUtils.cpp  LockUtils.h  Logging.h  OptionalAccess.h  Random.h  StringUtils.cpp  StringUtils.h  TaskExecutorPool.cpp  TaskExecutorPool.h  TemplateUtils.h  TestSslData.h
